--- a/package.json
+++ b/package.json
@@ -7,25 +7,31 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "tsc",
         "dev": "ts-node-dev --respawn src/index.ts",
-        "start": "tsc && node dist/index.js"
+        "start": "tsc && node dist/index.js",
+        "swagger": "tsoa spec"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
         "@types/node": "^18.15.11",
+        "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "morgan": "^1.10.0",
         "pg": "^8.10.0",
         "reflect-metadata": "^0.1.13",
+        "swagger-jsdoc": "^6.2.8",
+        "swagger-ui-express": "^4.6.2",
         "typeorm": "^0.3.12"
     },
     "devDependencies": {
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
         "@types/morgan": "^1.9.4",
+        "@types/swagger-jsdoc": "^6.0.1",
+        "@types/swagger-ui-express": "^4.1.3",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.0.3"
     }
