--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "express-validator": "^6.15.0",
         "morgan": "^1.10.0",
         "pg": "^8.10.0",
         "reflect-metadata": "^0.1.13",
@@ -27,6 +28,7 @@
         "typeorm": "^0.3.12"
     },
     "devDependencies": {
+        "@types/bcryptjs": "^2.4.2",
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
         "@types/morgan": "^1.9.4",
