change postgres db from local to railway instance

--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 PORT=5000
-DB_HOST=localhost
-DB_NAME=plataforma_tepsur
-DB_PORT=5432
+DB_HOST=containers-us-west-95.railway.app
+DB_NAME=railway
+DB_PORT=7698
 DB_USER=postgres
-DB_PASSWORD=admin
+DB_PASSWORD=YcQetlwwC3rX9xognFDf
+
+PGPASSWORD=YcQetlwwC3rX9xognFDf psql -h containers-us-west-95.railway.app -U postgres -p 7698 -d railway
