--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "tsc",
-        "dev": "ts-node-dev --respawn src/index.ts",
+        "dev": "ts-node-dev --respawn src/index.ts --dev",
         "start": "tsc && node dist/index.js",
         "swagger": "tsoa spec"
     },
@@ -15,22 +15,26 @@
     "license": "ISC",
     "dependencies": {
         "@types/node": "^18.15.11",
+        "@types/yargs": "^17.0.24",
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-validator": "^6.15.0",
+        "jsonwebtoken": "^9.0.0",
         "morgan": "^1.10.0",
         "pg": "^8.10.0",
         "reflect-metadata": "^0.1.13",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^4.6.2",
-        "typeorm": "^0.3.12"
+        "typeorm": "^0.3.12",
+        "yargs": "^17.7.1"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.2",
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
+        "@types/jsonwebtoken": "^9.0.1",
         "@types/morgan": "^1.9.4",
         "@types/swagger-jsdoc": "^6.0.1",
         "@types/swagger-ui-express": "^4.1.3",
