--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "tsc",
         "dev": "ts-node-dev --respawn src/index.ts --dev",
+        "dev:remote": "ts-node-dev --respawn src/index.ts",
         "start": "tsc && node dist/index.js",
         "swagger": "tsoa spec"
     },
@@ -28,6 +29,7 @@
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^4.6.2",
         "typeorm": "^0.3.12",
+        "uuid": "^9.0.0",
         "yargs": "^17.7.1"
     },
     "devDependencies": {
@@ -38,6 +40,7 @@
         "@types/morgan": "^1.9.4",
         "@types/swagger-jsdoc": "^6.0.1",
         "@types/swagger-ui-express": "^4.1.3",
+        "@types/uuid": "^9.0.1",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.0.3"
     }
