--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "jest",
         "build": "tsc",
         "dev": "ts-node-dev --respawn src/index.ts --dev",
         "dev:remote": "ts-node-dev --respawn src/index.ts",
-        "start": "tsc && node dist/index.js",
+        "start": "tsc && node dist/index.js --dev",
         "swagger": "tsoa spec"
     },
     "keywords": [],
@@ -38,6 +38,7 @@
         "@types/express": "^4.17.17",
         "@types/jsonwebtoken": "^9.0.1",
         "@types/morgan": "^1.9.4",
+        "@types/prettier": "^2.7.2",
         "@types/swagger-jsdoc": "^6.0.1",
         "@types/swagger-ui-express": "^4.1.3",
         "@types/uuid": "^9.0.1",
