--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "test": "jest",
         "build": "tsc",
-        "dev": "ts-node-dev --respawn src/index.ts",
+        "dev": "ts-node-dev --respawn src/index.ts --dev",
         "dev:remote": "ts-node-dev --respawn src/index.ts",
         "start": "tsc && node dist/index.js",
         "swagger": "tsoa spec"
