--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
         "@types/node": "^18.15.11",
         "@types/yargs": "^17.0.24",
         "bcryptjs": "^2.4.3",
+        "cloudinary": "^1.37.0",
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
+        "express-fileupload": "^1.4.0",
         "express-validator": "^6.15.0",
         "jsonwebtoken": "^9.0.0",
         "morgan": "^1.10.0",
@@ -36,6 +38,7 @@
         "@types/bcryptjs": "^2.4.2",
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
+        "@types/express-fileupload": "^1.4.1",
         "@types/jsonwebtoken": "^9.0.1",
         "@types/morgan": "^1.9.4",
         "@types/prettier": "^2.7.2",
