--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dependencies": {
         "@types/node": "^18.15.11",
         "@types/yargs": "^17.0.24",
+        "axios": "^1.4.0",
         "bcryptjs": "^2.4.3",
         "cloudinary": "^1.37.0",
         "cors": "^2.8.5",
