Add generacion de ficha de matricula part 1, endpoint para listar los grados de estudios

--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "express-validator": "^6.15.0",
         "jsonwebtoken": "^9.0.0",
         "morgan": "^1.10.0",
+        "pdfkit": "^0.13.0",
+        "pdfkit-construct": "^1.2.3",
         "pg": "^8.10.0",
         "reflect-metadata": "^0.1.13",
         "swagger-jsdoc": "^6.2.8",
@@ -42,6 +44,7 @@
         "@types/express-fileupload": "^1.4.1",
         "@types/jsonwebtoken": "^9.0.1",
         "@types/morgan": "^1.9.4",
+        "@types/pdfkit": "^0.12.9",
         "@types/prettier": "^2.7.2",
         "@types/swagger-jsdoc": "^6.0.1",
         "@types/swagger-ui-express": "^4.1.3",
