--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "morgan": "^1.10.0",
         "pdfkit": "^0.13.0",
         "pdfkit-construct": "^1.2.3",
+        "pdfkit-table": "^0.1.99",
         "pg": "^8.10.0",
         "reflect-metadata": "^0.1.13",
         "swagger-jsdoc": "^6.2.8",
