--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "express-fileupload": "^1.4.0",
         "express-validator": "^6.15.0",
         "jsonwebtoken": "^9.0.0",
+        "moment": "^2.29.4",
         "morgan": "^1.10.0",
         "pdfkit": "^0.13.0",
         "pdfkit-construct": "^1.2.3",
