--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "jest",
+        "test": "jest -c ./jest.unit.json",
         "build": "tsc",
         "dev": "ts-node-dev --respawn src/index.ts --dev",
         "dev:remote": "ts-node-dev --respawn src/index.ts",
@@ -44,6 +44,7 @@
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
         "@types/express-fileupload": "^1.4.1",
+        "@types/jest": "^29.5.2",
         "@types/jsonwebtoken": "^9.0.1",
         "@types/morgan": "^1.9.4",
         "@types/pdfkit": "^0.12.9",
@@ -51,6 +52,8 @@
         "@types/swagger-jsdoc": "^6.0.1",
         "@types/swagger-ui-express": "^4.1.3",
         "@types/uuid": "^9.0.1",
+        "jest": "^29.5.0",
+        "ts-jest": "^29.1.0",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.0.3"
     }
