--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "jest -c ./jest.unit.json",
         "build": "tsc",
-        "dev": "ts-node-dev --respawn src/index.ts --dev",
-        "dev:remote": "ts-node-dev --respawn src/index.ts",
         "start": "tsc && node dist/index.js",
+        "dev": "ts-node-dev --respawn src/index.ts --develop",
+        "dev:remote": "ts-node-dev --respawn src/index.ts",
+        "test": "jest -c ./jest.unit.json --silent",
+        "test:watch": "yarn test -- --watch",
         "swagger": "tsoa spec"
     },
     "keywords": [],
@@ -49,10 +50,12 @@
         "@types/morgan": "^1.9.4",
         "@types/pdfkit": "^0.12.9",
         "@types/prettier": "^2.7.2",
+        "@types/supertest": "^2.0.12",
         "@types/swagger-jsdoc": "^6.0.1",
         "@types/swagger-ui-express": "^4.1.3",
         "@types/uuid": "^9.0.1",
         "jest": "^29.5.0",
+        "supertest": "^6.3.3",
         "ts-jest": "^29.1.0",
         "ts-node-dev": "^2.0.0",
         "typescript": "^5.0.3"
