--- a/tsconfig.json
+++ b/tsconfig.json
@@ -85,7 +85,7 @@
         // "noImplicitThis": true,                           /* Enable error reporting when 'this' is given the type 'any'. */
         // "useUnknownInCatchVariables": true,               /* Default catch clause variables as 'unknown' instead of 'any'. */
         // "alwaysStrict": true,                             /* Ensure 'use strict' is always emitted. */
-        "noUnusedLocals": true /* Enable error reporting when local variables aren't read. */,
+        //"noUnusedLocals": true                            /* Enable error reporting when local variables aren't read. */,
         "noUnusedParameters": true /* Raise an error when a function parameter isn't read. */,
         // "exactOptionalPropertyTypes": true,               /* Interpret optional property types as written, rather than adding 'undefined'. */
         // "noImplicitReturns": true,                        /* Enable error reporting for codepaths that do not explicitly return in a function. */
@@ -99,7 +99,7 @@
         /* Completeness */
         // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
         "skipLibCheck": true /* Skip type checking all .d.ts files. */,
-        "types": ["node", "express", "prettier", "jest"]
+        "types": ["express", "prettier", "jest"]
     },
     "exclude": ["**/*.spec.ts"]
 }
