--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cloudinary": "^1.37.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "express-validator": "^6.15.0",
@@ -31,6 +32,7 @@
     "pdfkit-construct": "^1.2.3",
     "pdfkit-table": "^0.1.99",
     "pg": "^8.10.0",
+    "puppeteer": "^20.8.3",
     "reflect-metadata": "^0.1.13",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^4.6.2",
