--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "ejs": "^3.1.9",
+        "exceljs": "^4.3.0",
         "express": "^4.18.2",
         "express-fileupload": "^1.4.0",
         "express-validator": "^6.15.0",
